// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CloseButton > styles > should render and match snapshot when not visible 1`] = `
.circuit-0 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 800;
}

@media (min-width: 960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
  class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a _base_9bf092 circuit-0"
  title="Close"
  type="button"
>
  <span
    class="_base_2b3edd _byte_2b3edd _spinner_892426"
  >
    <span
      class="_hide-visually_73b4bb"
    />
  </span>
  <span
    class="_content_892426"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="_hide-visually_73b4bb"
    >
      Close
    </span>
  </span>
</button>
`;

exports[`CloseButton > styles > should render and match snapshot when visible 1`] = `
.circuit-0 {
  position: absolute;
  bottom: 16px;
  right: 16px;
  -webkit-transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  transition: opacity 150ms ease-in-out,visibility 150ms ease-in-out;
  visibility: hidden;
  opacity: 0;
  z-index: 800;
  visibility: inherit;
  opacity: 1;
}

@media (min-width: 960px) {
  .circuit-0 {
    visibility: hidden;
  }
}

<button
  class="_base_892426 _focus-visible_73b4bb _giga_892426 _secondary_892426 _giga_f6dd9a _base_9bf092 circuit-0"
  title="Close"
  type="button"
>
  <span
    class="_base_2b3edd _byte_2b3edd _spinner_892426"
  >
    <span
      class="_hide-visually_73b4bb"
    />
  </span>
  <span
    class="_content_892426"
  >
    <svg
      aria-hidden="true"
      fill="none"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M1.293 1.293a1 1 0 0 1 1.414 0L8 6.586l5.293-5.293a1 1 0 1 1 1.414 1.414L9.414 8l5.293 5.293a1 1 0 0 1-1.414 1.414L8 9.414l-5.293 5.293a1 1 0 0 1-1.414-1.414L6.586 8 1.293 2.707a1 1 0 0 1 0-1.414z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <span
      class="_hide-visually_73b4bb"
    >
      Close
    </span>
  </span>
</button>
`;
